--- a/PhotoParade/Base.lproj/Main.storyboard
+++ b/PhotoParade/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O4L-Ii-Ars">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O4L-Ii-Ars">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,14 +15,63 @@
                     <view key="view" contentMode="scaleToFill" id="aFB-T8-EEQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EoJ-9F-Joj">
+                                <rect key="frame" x="50" y="150" width="275" height="367"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Ra-TY-Qvr">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="367"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNX-3Z-3ep">
+                                        <rect key="frame" x="14" y="8" width="39" height="30"/>
+                                        <state key="normal" title="Close">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onDonePressed:" destination="ekH-Fy-ow1" eventType="touchUpInside" id="6gB-6h-cFP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="1Ra-TY-Qvr" firstAttribute="leading" secondItem="EoJ-9F-Joj" secondAttribute="leading" id="9lu-oj-41K"/>
+                                    <constraint firstItem="1Ra-TY-Qvr" firstAttribute="top" secondItem="EoJ-9F-Joj" secondAttribute="top" id="Dei-65-nb1"/>
+                                    <constraint firstAttribute="bottom" secondItem="1Ra-TY-Qvr" secondAttribute="bottom" id="JBV-dj-6FV"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Ra-TY-Qvr" secondAttribute="trailing" id="L06-HN-8eD"/>
+                                    <constraint firstItem="cNX-3Z-3ep" firstAttribute="top" secondItem="EoJ-9F-Joj" secondAttribute="top" constant="8" id="NjW-yY-nyN"/>
+                                    <constraint firstItem="cNX-3Z-3ep" firstAttribute="leading" secondItem="EoJ-9F-Joj" secondAttribute="leading" constant="14" id="YnT-iw-v0t"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="EoJ-9F-Joj" firstAttribute="top" secondItem="oKj-UH-O79" secondAttribute="top" constant="150" id="437-qG-VzO"/>
+                            <constraint firstItem="EoJ-9F-Joj" firstAttribute="leading" secondItem="oKj-UH-O79" secondAttribute="leading" constant="50" id="WK9-ac-vse"/>
+                            <constraint firstItem="oKj-UH-O79" firstAttribute="trailing" secondItem="EoJ-9F-Joj" secondAttribute="trailing" constant="50" id="pKo-SJ-Xgc"/>
+                            <constraint firstItem="oKj-UH-O79" firstAttribute="bottom" secondItem="EoJ-9F-Joj" secondAttribute="bottom" constant="150" id="qg6-8Y-qyT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="oKj-UH-O79"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="uGV-z5-a0a"/>
+                    <navigationItem key="navigationItem" title="Title" id="uGV-z5-a0a">
+                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="done" id="Fhc-aG-Qyp"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="1Ra-TY-Qvr" id="3VS-iK-TAc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I6i-sx-inH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2001" y="-100"/>
+            <point key="canvasLocation" x="1908" y="-100"/>
         </scene>
         <!--Photo Parade-->
         <scene sceneID="CcI-cF-83h">
@@ -35,14 +82,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Photo Description" translatesAutoresizingMaskIntoConstraints="NO" id="mVH-HS-HTq">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="fv2-cd-RY6" id="PB1-QD-afN"/>
                                 </connections>
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="m1N-9I-dl9">
-                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="100" width="375" height="567"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6Iw-81-epg">
                                     <size key="itemSize" width="134" height="122"/>
@@ -102,7 +149,6 @@
                                             <outlet property="containerView" destination="8Zq-c9-pVK" id="AYk-1M-5bh"/>
                                             <outlet property="imageView" destination="Wm3-os-r7S" id="4vl-gN-VoF"/>
                                             <outlet property="titleLabel" destination="CKT-SA-0hq" id="oSf-Tx-byf"/>
-                                            <segue destination="ekH-Fy-ow1" kind="show" id="pge-ai-HBD"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -112,10 +158,10 @@
                                 </connections>
                             </collectionView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ixc-1t-INZ" customClass="PhotoSearchTableStateView" customModule="PhotoParade" customModuleProvider="target">
-                                <rect key="frame" x="15" y="135" width="345" height="517"/>
+                                <rect key="frame" x="15" y="115" width="345" height="537"/>
                                 <subviews>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="qfs-da-HaI">
-                                        <rect key="frame" x="154.5" y="0.0" width="37" height="37"/>
+                                        <rect key="frame" x="154" y="0.0" width="37" height="37"/>
                                         <color key="color" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dmz-a0-Fw5">
@@ -171,7 +217,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="O4L-Ii-Ars" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="imA-Ie-K9k">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
